# github-shell-helpers

./: .env  .gitignore  AGENTS.md  Git-Shell-Helpers-Installer.sh  Helpers-Installer.sh  PATCHES.md  README.md  VERSION  git-checkpoint  git-copilot-devops-audit  git-copilot-devops-audit-community-pull  git-copilot-devops-audit-community-research-submit  git-copilot-devops-audit-community-submit  git-copilot-quickstart  git-cs-grade.js  git-fucked-the-push  git-get  git-help-i-pushed-an-env  git-initalize  git-initialize  git-remerge  git-research-mcp  git-research-mcp.js  git-resolve  git-scan-for-leaked-envs  git-shell-helpers-mcp  git-shell-helpers-mcp.js  git-upload  git-upload.bak  github-shell-helpers-installer.sh  gsh  helpers  install-git-shell-helpers  install-helpers  mojo-research.md  package.json  rebuild-ext.sh  rebuild-mcp.sh  rebuild-upload.sh  research-cascade-layers.md  (+10 more)
.github/: COMMIT_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  devops-audit-community-seed.md  devops-audit-community-settings.json  devops-audit-research.md  no-heredocs-research.md  release-config.example.env
.github copy/: bugs.md  copilot-instructions.md  plan.md
aioserver-vision-tool/: README.md  extension.js  mcp-server.js  package.json
atlas-api/: .env.example  package.json
claude-config/: CLAUDE.gsh.md  CLAUDE.helpers.md
community-cache/: CHANGELOG.md  manifest.json
copilot-config/: devops-audit-community-cache.md  devops-audit-community-settings.json
corpus/: cs-principles.md
cs-grade/: Cargo.toml
cs-grade/src/: fmt.rs  lib.rs  main.rs  paths.rs  project.rs  report.rs  scoring.rs  signals.rs
cs-grade/tests/: integration.rs
cs-grade/tests/fixtures/aplus/: README.md
cs-grade/tests/fixtures/aplus/docs/: design.md
cs-grade/tests/fixtures/aplus/src/: Controller.java  ControllerTest.java  Model.java  ModelTest.java  View.java  ViewTest.java
cs-grade/tests/fixtures/sample/: README.md
cs-grade/tests/fixtures/sample/docs/: design.md
cs-grade/tests/fixtures/sample/src/controller/: GameController.java
cs-grade/tests/fixtures/sample/src/model/: Board.java  BoardImpl.java
cs-grade/tests/fixtures/sample/src/view/: BoardView.java
cs-grade/tests/fixtures/sample/test/: BoardTest.java
cs-grade/tests/golden/: aplus.GRADE.md  aplus.json  sample.GRADE.md  sample.json
knowledge/: _index.json  accessibility-engineering.md  ai-ethics.md  algorithms-bloom-filters.md  algorithms-compression.md  algorithms-concurrency.md  algorithms-consistent-hashing.md  algorithms-dynamic-programming.md  algorithms-graph.md  algorithms-hash-tables.md  algorithms-randomized.md  algorithms-scheduling.md  algorithms-segment-trees.md  algorithms-skip-lists.md  algorithms-sorting.md  algorithms-string.md  algorithms-trees.md  algorithms-trie.md  algorithms-union-find.md  antipatterns-hall-of-infamy.md  api-authentication.md  api-design.md  api-documentation.md  api-error-handling.md  api-graphql-depth.md  api-idempotency.md  api-message-queues.md  api-pagination.md  api-rate-limiting.md  api-rest-maturity.md  api-versioning.md  api-webhooks.md  architecture-api-gateway.md  architecture-bff.md  architecture-cell-based.md  architecture-clean-hexagonal.md  architecture-cqrs.md  architecture-data-mesh.md  architecture-data-pipeline.md  architecture-ddd.md  (+907 more)
lib/: env-batch-ops.sh  env-cache.sh  env-git-ops.sh  env-history-clean.sh  env-patterns.sh  (+32 more)
native/: Cargo.toml
native/examples/: audit_review.rs  crawl_and_learn.rs  grade_semantic.rs  learn_concepts.rs  learn_from_docs.rs  lint_unified.rs  lint_with_memory.rs  measure_ai.rs  measure_generic.rs  measure_modalities.rs  measure_moe.rs  measure_precise.rs  measure_sig.rs  memory_demo.rs  review_repo.rs  train_lint.rs
native/src/: cli.rs  doc_crawler.rs  git.rs  lib.rs  lint_ai.rs  lint_ast.rs  lint_brain.rs  lint_checkers.rs  lint_concept.rs  lint_docs.rs  lint_graph.rs  lint_index.rs  lint_match.rs  lint_moe.rs  lint_practice.rs  lint_semantic.rs  lint_sig.rs  lint_train.rs  linter.rs  main.rs  proto.rs  registry.rs  util.rs
native/src/gitcli/: checkpoint.rs  cs_grade.rs  fucked_push.rs  get.rs  initialize.rs  mod.rs  remerge.rs  resolve.rs  scan_envs.rs  upload.rs
native/src/index/: lang.rs
native/src/memory/: controller.rs  gpu.rs  working_set.rs
native/src/tools/: checkpoint.rs  cs_lint.rs  lint.rs  lint_source.rs  lint_web.rs  mod.rs  project_index.rs  project_tools.rs  setup.rs  strict_lint.rs  web.rs  workspace_context.rs
(+449 files in other folders)
