[package]
name = "helpers-native"
version = "0.3.8"
edition = "2021"
rust-version = "1.74"
description = "Native Rust implementations of the hot Helpers MCP tools."
license = "MIT"
repository = "https://github.com/RockyWearsAHat/github-shell-helpers"

# One multiplexed binary the Node MCP daemon shells out to:
#   helpers-native schemas        -> JSON array of native tool schemas
#   helpers-native call <tool>    -> reads {args} JSON on stdin, prints MCP content
[[bin]]
name = "helpers-native"
path = "src/main.rs"

[lib]
name = "helpers_native"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object key order stable so on-disk indexes (and the
# community-index contract) match the original JavaScript JSON.stringify output.
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
rayon = "1"
# git-cs-grade is folded into this one binary (busybox dispatch). The grading
# logic lives in the cs_grade library crate; we ship a single helpers-native.
cs_grade = { path = "../cs-grade", package = "git-cs-grade" }
# Timestamps that match JavaScript's Date.toISOString() exactly (UTC, millis, Z).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Bounded waits so strict_lint never hangs on a slow linter subprocess.
wait-timeout = "0.2"
# Canonical sha256 for the packed lint-index checksum (fast-path integrity check).
sha2 = "0.10"
# search_web / scrape_webpage drive a real Chrome over CDP (like puppeteer, but
# synchronous and Node-free). CDP is a local ws:// socket, so no TLS/OpenSSL —
# keeps cross-compilation to musl/windows-gnu clean.
headless_chrome = "1"
# Embed the agent-config trees (claude-config/, copilot-config/) into the binary
# so `helpers install` is self-contained — no source tree needed at install time.
# Pure Rust, so cross-compilation to musl/windows stays clean.
include_dir = "0.7"

# Project indexer: gitignore-aware walk + tree-sitter symbol/reference tags.
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-tags = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

# GPU acceleration for the lint-moe hypervector distance batch — OPTIONAL, OFF by
# default, so the shipped binary stays portable and cross-compiles clean to
# musl/windows. Enable with `--features gpu`. wgpu picks Metal/Vulkan/DX12 at runtime;
# the CPU path is the fallback when no GPU is present, so behaviour is identical.
wgpu = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", optional = true }

# Direct-fetch documentation crawler — OPTIONAL, OFF by default. `ureq` is a tiny blocking HTTP
# client; with rustls (pure-Rust TLS, no OpenSSL) it cross-compiles to musl/windows as cleanly as
# the rest of the binary, so the crawler adds no toolchain burden when the `crawl` feature is on.
ureq = { version = "2", optional = true, default-features = false, features = ["tls", "gzip"] }

[features]
# Off by default: `cargo build` ships the portable CPU build; `--features gpu` adds the
# wgpu-backed batch Hamming kernel used by lint-moe training; `--features crawl` adds the
# direct-fetch documentation crawler (no headless browser).
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
crawl = ["dep:ureq"]

[[example]]
name = "crawl_and_learn"
required-features = ["crawl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
